# YouTube-clickbait-metrics-CLI

./: .cursorrules  .gitignore  README.md  SPEC.md  main.py  pyproject.toml
fixtures/: invalid_missing_col.csv  valid.csv
src/youtube_cli/: __init__.py
src/youtube_cli/cli/: __init__.py  parser.py
src/youtube_cli/data/: __init__.py  loader.py  models.py
src/youtube_cli/reports/: __init__.py  base.py  clickbait.py  registry.py
src/youtube_cli/utils/: output.py
tests/: conftest.py
tests/test_cli/: test_parser.py
tests/test_data/: test_loader.py  test_models.py
tests/test_reports/: test_clickbait.py  test_registry.py
